--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,11 @@ body {
     color: #ff8fcb;
     font-size: 100px;
     letter-spacing: -3px;
+    background: #4a4e69;
+}
+
+.header-logo {
+    width: 8%;
 }
 
 /* Billy Font Kit */
